--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-three/drei": "2.2.3",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.5.0",
@@ -13,8 +14,11 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-three-fiber": "^5.3.16",
     "redux": "^4.0.5",
+    "redux-form": "^8.3.7",
     "redux-thunk": "^2.3.0",
+    "three": "^0.124.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
@@ -42,6 +46,7 @@
     ]
   },
   "devDependencies": {
+    "@react-three/drei": "^2.2.20",
     "eslint": "^7.15.0"
   }
 }
