--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "redux": "^4.0.5",
     "redux-form": "^8.3.7",
     "redux-thunk": "^2.3.0",
+    "reselect": "^4.0.0",
     "styled-components": "^5.2.1",
     "three": "^0.124.0",
     "typescript": "^4.1.3",
