--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.3",
-    "@react-three/drei": "2.2.3",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.5.0",
@@ -13,17 +12,20 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "axios": "^0.21.1",
+    "jquery-1.8": "^1.8.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-slick": "^0.28.0",
     "react-three-fiber": "^5.3.16",
     "redux": "^4.0.5",
     "redux-form": "^8.3.7",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.2.1",
     "three": "^0.124.0",
     "typescript": "^4.1.3",
@@ -54,7 +56,7 @@
     ]
   },
   "devDependencies": {
-    "@react-three/drei": "^2.2.20",
-    "eslint": "^7.15.0"
+    "eslint": "^7.15.0",
+    "jquery": "^3.5.1"
   }
 }
