--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
   },
   "devDependencies": {
     "eslint": "^7.15.0",
-    "jquery": "^3.5.1"
+    "jquery": "^3.5.1",
+    "react-test-renderer": "^17.0.1"
   }
 }
