--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jquery-1.8": "^1.8.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-js-pagination": "^3.0.3",
     "react-redux": "^7.2.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
