--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
   },
   "devDependencies": {
     "eslint": "^7.15.0",
+    "gh-pages": "^3.1.0",
     "jquery": "^3.5.1",
     "react-test-renderer": "^17.0.1"
   }
