--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "axios": "^0.21.1",
+    "formik": "^2.2.6",
     "jquery-1.8": "^1.8.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
