--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "axios": "^0.21.1",
+    "classnames": "^2.2.6",
     "formik": "^2.2.6",
     "jquery-1.8": "^1.8.3",
+    "node-sass": "^4.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-js-pagination": "^3.0.3",
     "react-redux": "^7.2.2",
+    "react-responsive": "^8.2.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
