--- a/package.json
+++ b/package.json
@@ -64,6 +64,9 @@
     ]
   },
   "devDependencies": {
+    "@types/react-redux": "^7.1.16",
+    "@types/react-router-dom": "^5.1.7",
+    "@types/redux-form": "^8.3.1",
     "eslint": "^7.15.0",
     "gh-pages": "^3.1.0",
     "jquery": "^3.5.1",
