--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
   "devDependencies": {
     "@types/classnames": "^2.2.11",
     "@types/react-redux": "^7.1.16",
+    "@types/react-responsive": "^8.0.2",
     "@types/react-router-dom": "^5.1.7",
     "@types/redux-form": "^8.3.1",
     "eslint": "^7.15.0",
