--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^14.14.22",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "antd": "^4.16.2",
     "axios": "^0.21.1",
     "classnames": "^2.2.6",
     "formik": "^2.2.6",
